# todo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.rst  pyproject.toml  run.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
tests/: conftest.py  test_api.py
todo/: __init__.py  api.py  models.py  views.py
