[tool.poetry]
name = "todo"
version = "0.1.0"
description = "A simple todo app Pycon2020"
authors = ["Rohan Singh <rohanmyself@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
requests = "^2.24.0"
Flask-SQLalchemy = "^2.4.4"
sphinx = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-flask-sqlalchemy = "^1.0.2"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
